[tool.poetry]
name = "deeplearningpytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.12,<3.10"
torch = "~1.12.1"
jupyter = "^1"
matplotlib = "^3"
seaborn = "^0"
pandas = "^1"
setuptools = "^65"
torchvision = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
